# YTsmallapi

./: .gitignore  .pdm-python  README.md  config.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
yutservice/: config.py  main.py
yutservice/models/: dbmodels.py
yutservice/routes/: auth.py  byt.py  channel.py  injectors.py  route.py  yt.py
yutservice/schemas/: reqmodel.py  respmodel.py  usersschem.py
yutservice/services/: authser.py  badyoutuber.py  channeldataer.py  service.py  youtuber.py
yutservice/utils/: db_session.py  repository.py  tokengen.py
yutservice/yureq/: ytreq.py  ytreq2.py
